fixed some layout bugs

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -80,9 +80,7 @@ h1 {
 #about,
 #specifications,
 #examples,
-#submit,
 #calculator,
-#submission,
 form,
 #development {
   display: flex;
@@ -92,6 +90,19 @@ form,
   margin: 0;
   padding-left: 20em;
   padding-right: 20em;
+}
+
+#submit {
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+  justify-content: space-around;
+  padding-left: 5em;
+  padding-right: 5em;
+}
+
+form {
+  flex-direction: column;
 }
 
 h3 a {
@@ -117,9 +128,13 @@ h3 a img {
 #examples p {
   padding-left: 5em;
   padding-right: 5em;
-  margin-right: 6em;
-  margin-left: 6em;
+  margin-right: 5em;
+  margin-left: 5em;
   margin-bottom: 2em;
+}
+
+#examples {
+  margin-bottom: 5em;
 }
 
 #solution-pics,
@@ -153,6 +168,10 @@ figure.solution-figure {
 .example-figure img {
   width: 300px;
   height: auto;
+}
+
+#submission form #submit-button {
+  margin: 1.5em 7em;
 }
 
 #development {
